[metadata]
name = starlette
version = attr: starlette.__init__.__version__
author = Tom Christie
author_email = tom@tomchristie.com
description = The little ASGI library that shines.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/encode/starlette
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires =
    anyio >=3.0.0, <4
    typing_extensions; python_version <'3.8'
    contextlib2 >=21.6.0; python_version <'3.7'

[options.package_data]
starlette = py.typed

[options.packages.find]
exclude =
    tests*

[options.extras_require]
full =
    itsdangerous
    jinja2
    python-multipart
    pyyaml
    requests


[flake8]
ignore = W503, E203, B305
max-line-length = 88

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = False
# https://github.com/encode/starlette/issues/1045
# check_untyped_defs = True

[tool:isort]
profile = black
combine_as_imports = True

[tool:pytest]
addopts =
  -rxXs
  --strict-config
  --strict-markers
xfail_strict=True
filterwarnings=
    # Turn warnings that aren't filtered into exceptions
    error
    ignore: Using or importing the ABCs from 'collections' instead of from 'collections\.abc' is deprecated.*:DeprecationWarning
    ignore: The 'context' alias has been deprecated. Please use 'context_value' instead\.:DeprecationWarning
    ignore: The 'variables' alias has been deprecated. Please use 'variable_values' instead\.:DeprecationWarning
    # Workaround for Python 3.9.7 (see https://bugs.python.org/issue45097)
    ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10\.:DeprecationWarning:asyncio

[coverage:run]
source_pkgs = starlette, tests

[coverage:report]
exclude_lines =
    pragma: no cover
    pragma: nocover
    if typing.TYPE_CHECKING:
